--- a/QuizMasterClient/QuizMasterClient/Views/presenter/Teams.html
+++ b/QuizMasterClient/QuizMasterClient/Views/presenter/Teams.html
@@ -19,7 +19,7 @@
                     <td>{{ team.TeamName }}</td>
                     <td>{{ team.TeamMembers }}</td>
                     <td>{{ team.TeamScore }}</td>
-                    <td>{{ team.QuestionsAttended }}</td>
+                    <td>{{ team.QuestionsAttempted }}</td>
                     <td>{{ team.QuestionsPassed }}</td>
                     <td>{{ team.AnswersCorrect }}</td>
                 </tr>
