--- a/QuizMasterClient/QuizMasterClient/Views/presenter/home.html
+++ b/QuizMasterClient/QuizMasterClient/Views/presenter/home.html
@@ -1,2 +1,10 @@
-﻿<h1>Home</h1>
-<p>{{message}}</p>
+﻿<div class="glass">
+<h1>WELCOME {{userName}} TO QUIZ MASTER's PRESENTER PORTAL</h1>
+
+<ul>
+    <l1><h1>You can Start Quiz by clicking on Questions tab</h1></l1>
+    <l1><h1>You can View Teams and Their scores by clicking on Teams tab</h1></l1>
+    
+</ul>
+
+</div>
