--- a/QuizMasterClient/QuizMasterClient/Views/presenter/PresenterPortal.html
+++ b/QuizMasterClient/QuizMasterClient/Views/presenter/PresenterPortal.html
@@ -22,6 +22,7 @@
     <script src="../../Scripts/Controllers/presenter/homeController.js"></script>
     <script src="../../Scripts/Controllers/presenter/questionsController.js"></script>
     <script src="../../Scripts/Controllers/presenter/teamsController.js"></script>
+    <script src="../../Scripts/Controllers/presenter/profileController.js"></script>
 
     <!--Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../../Content/bootstrap.min.css" />
@@ -47,10 +48,10 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a><span class="glyphicon glyphicon-user"></span> Profile</a>
+                    <a ui-sref="profile"><span class="glyphicon glyphicon-user"></span> Profile</a>
                 </li>
                 <li>
-                    <a><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
+                    <a ng-click="logOut()"><span class="glyphicon glyphicon-log-out"></span> Log Out</a>
                 </li>
             </ul>
         </div>
