added Start Quiz button at presenter home page

--- a/QuizMasterClient/QuizMasterClient/Views/presenter/home.html
+++ b/QuizMasterClient/QuizMasterClient/Views/presenter/home.html
@@ -6,5 +6,6 @@
     <l1><h1>You can View Teams and Their scores by clicking on Teams tab</h1></l1>
     
 </ul>
+    <a ui-sref="questions" class="btn btn-lg btn-success">Start Quiz <span class="glyphicon glyphicon-play"></span></a>
 
 </div>
