--- a/QuizMasterClient/QuizMasterClient/Views/presenter/questions.html
+++ b/QuizMasterClient/QuizMasterClient/Views/presenter/questions.html
@@ -5,7 +5,7 @@
 
         <input type="radio" ng-model="selectedOption" ng-value="currentQuestion.OptionOne" class="radio radio-inline" id="radio 1"/>
         <label for="radio 1">
-            {{currentQuestion.OptionTwo}}
+            {{currentQuestion.OptionOne}}
         </label>
     </div>
     <div class="rado-div">
